tests/a/tests/integrity/fail/let/let.1.stderr
error: expected {bin}{bin}, found {bin,c}{bin}
  --> tests/integrity/fail/let/let.1.rs:10:13
   |
10 |     let y = x;
   |             ^
